// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`embedded_languages > Misc > should format multiple embedded languages in one file 1`] = `
"--- FILE -----------
mixed.js
--- BEFORE ---------
// Multiple embedded languages in one file
const mixedStyles = css\`.button{color:red;}\`;

const mixedStyled = styled.button\`padding:10px;\`;

const mixedQuery = gql\`query{users{name}}\`;

const mixedTemplate = html\`<div><h1>Title</h1></div>\`;

const mixedDocs = md\`#Documentation
This is **important**.\`;

--- AFTER ----------
// Multiple embedded languages in one file
const mixedStyles = css\`
  .button {
    color: red;
  }
\`;

const mixedStyled = styled.button\`
  padding: 10px;
\`;

const mixedQuery = gql\`
  query {
    users {
      name
    }
  }
\`;

const mixedTemplate = html\`
  <div><h1>Title</h1></div>
\`;

const mixedDocs = md\`
  #Documentation
  This is **important**.
\`;

--------------------"
`;

exports[`embedded_languages > Misc > should not format regular templates, prettier-ignore, unsupported tags, and invalid syntax 1`] = `
"--- FILE -----------
misc.js
--- BEFORE ---------
// Regular JavaScript - No embedded languages (should not be affected)
function greet(name) {
  return \`Hello, \${name}!\`;
}

const message = \`This is a regular template string\`;

class Formatter {
  format(text) {
    return text.trim();
  }
}

// prettier-ignore - Should not format
// prettier-ignore
const unformattedCss = css\`.button{color:red;background:blue;}\`;

const formattedCss = css\`.container{display:flex;align-items:center;}\`;

// prettier-ignore
const unformattedGql = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const formattedGql = gql\`query GetPosts{posts{title author}}\`;

// Unsupported tags - Should not format
const unknown = customTag\`This won't be formatted\`;

const sqlQuery = sql\`SELECT * FROM users WHERE id = 1\`;

// Invalid syntax in supported tag - Should not format
const invalidCss = css\`
  repeating-linear-gradient(
    0deg,
var(--color),
    transparent 3px
  );
\`;

--- AFTER ----------
// Regular JavaScript - No embedded languages (should not be affected)
function greet(name) {
  return \`Hello, \${name}!\`;
}

const message = \`This is a regular template string\`;

class Formatter {
  format(text) {
    return text.trim();
  }
}

// prettier-ignore - Should not format
// prettier-ignore
const unformattedCss = css\`.button{color:red;background:blue;}\`;

const formattedCss = css\`
  .container {
    display: flex;
    align-items: center;
  }
\`;

// prettier-ignore
const unformattedGql = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const formattedGql = gql\`
  query GetPosts {
    posts {
      title
      author
    }
  }
\`;

// Unsupported tags - Should not format
const unknown = customTag\`This won't be formatted\`;

const sqlQuery = sql\`SELECT * FROM users WHERE id = 1\`;

// Invalid syntax in supported tag - Should not format
const invalidCss = css\`
  repeating-linear-gradient(
    0deg,
var(--color),
    transparent 3px
  );
\`;

--------------------"
`;

exports[`embedded_languages > css > should format (auto) 1`] = `
"--- FILE -----------
css.js
--- BEFORE ---------
// Tagged template literals with css and styled tags
const styles = css\`.button{color:red;background:blue;padding:10px 20px;}\`;

const styledComponent = styled\`background-color:#ffffff;border-radius:4px;\`;

// Member expression tags
const cssGlobal = css.global\`.reset{margin:0;padding:0;}\`;

const styledDiv = styled.div\`width:100%;height:100vh;\`;

const styledLink = styled["a"]\`text-decoration:none;color:#007bff;\`;

const styledButton = styled(Button)\`font-size:16px;color:#333;\`;

// CSS prop and styled-jsx
const cssProp = <div css={\`display: flex; align-items: center;\`}>Hello</div>;

const styledJsx = <style jsx>{\`display: flex; align-items: center;\`}</style>;

--- AFTER ----------
// Tagged template literals with css and styled tags
const styles = css\`
  .button {
    color: red;
    background: blue;
    padding: 10px 20px;
  }
\`;

const styledComponent = styled\`
  background-color: #ffffff;
  border-radius: 4px;
\`;

// Member expression tags
const cssGlobal = css.global\`
  .reset {
    margin: 0;
    padding: 0;
  }
\`;

const styledDiv = styled.div\`
  width: 100%;
  height: 100vh;
\`;

const styledLink = styled["a"]\`
  text-decoration: none;
  color: #007bff;
\`;

const styledButton = styled(Button)\`
  font-size: 16px;
  color: #333;
\`;

// CSS prop and styled-jsx
const cssProp = (
  <div
    css={\`
      display: flex;
      align-items: center;
    \`}
  >
    Hello
  </div>
);

const styledJsx = (
  <style jsx>{\`
    display: flex;
    align-items: center;
  \`}</style>
);

--------------------"
`;

exports[`embedded_languages > graphql > should format (auto) 1`] = `
"--- FILE -----------
graphql.js
--- BEFORE ---------
// Tagged template literals with gql and graphql tags
const query = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const mutation = graphql\`mutation CreatePost($input:PostInput!){createPost(input:$input){id title}}\`;

--- AFTER ----------
// Tagged template literals with gql and graphql tags
const query = gql\`
  query GetUser($id: ID!) {
    user(id: $id) {
      name
      email
    }
  }
\`;

const mutation = graphql\`
  mutation CreatePost($input: PostInput!) {
    createPost(input: $input) {
      id
      title
    }
  }
\`;

--------------------"
`;

exports[`embedded_languages > html > should format (auto) 1`] = `
"--- FILE -----------
html.js
--- BEFORE ---------
// Tagged template literals with html tag
const template = html\`<div class="container"><h1>Hello</h1><p>World</p></div>\`;

const component = html\`<button type="button" onclick="handleClick()">Click</button>\`;

--- AFTER ----------
// Tagged template literals with html tag
const template = html\`
  <div class="container">
    <h1>Hello</h1>
    <p>World</p>
  </div>
\`;

const component = html\`
  <button type="button" onclick="handleClick()">Click</button>
\`;

--------------------"
`;

exports[`embedded_languages > markdown > should format (auto) 1`] = `
"--- FILE -----------
markdown.js
--- BEFORE ---------
// Tagged template literals with md and markdown tags
const documentation = md\`#Heading
This is **bold**.
-Item 1
-Item 2\`;

const readme = markdown\`##Installation
\\\`\\\`\\\`bash
npm install package
\\\`\\\`\\\`\`;

--- AFTER ----------
// Tagged template literals with md and markdown tags
const documentation = md\`
  #Heading
  This is **bold**.
  -Item 1
  -Item 2
\`;

const readme = markdown\`
  ##Installation
  \\\`\\\`\\\`bash
  npm install package
  \\\`\\\`\\\`
\`;

--------------------"
`;

exports[`embedded_languages > should not format any language (off) 1`] = `
"--- FILE -----------
css.js
--- BEFORE ---------
// Tagged template literals with css and styled tags
const styles = css\`.button{color:red;background:blue;padding:10px 20px;}\`;

const styledComponent = styled\`background-color:#ffffff;border-radius:4px;\`;

// Member expression tags
const cssGlobal = css.global\`.reset{margin:0;padding:0;}\`;

const styledDiv = styled.div\`width:100%;height:100vh;\`;

const styledLink = styled["a"]\`text-decoration:none;color:#007bff;\`;

const styledButton = styled(Button)\`font-size:16px;color:#333;\`;

// CSS prop and styled-jsx
const cssProp = <div css={\`display: flex; align-items: center;\`}>Hello</div>;

const styledJsx = <style jsx>{\`display: flex; align-items: center;\`}</style>;

--- AFTER ----------
// Tagged template literals with css and styled tags
const styles = css\`.button{color:red;background:blue;padding:10px 20px;}\`;

const styledComponent = styled\`background-color:#ffffff;border-radius:4px;\`;

// Member expression tags
const cssGlobal = css.global\`.reset{margin:0;padding:0;}\`;

const styledDiv = styled.div\`width:100%;height:100vh;\`;

const styledLink = styled["a"]\`text-decoration:none;color:#007bff;\`;

const styledButton = styled(Button)\`font-size:16px;color:#333;\`;

// CSS prop and styled-jsx
const cssProp = <div css={\`display: flex; align-items: center;\`}>Hello</div>;

const styledJsx = <style jsx>{\`display: flex; align-items: center;\`}</style>;

--------------------

--- FILE -----------
graphql.js
--- BEFORE ---------
// Tagged template literals with gql and graphql tags
const query = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const mutation = graphql\`mutation CreatePost($input:PostInput!){createPost(input:$input){id title}}\`;

--- AFTER ----------
// Tagged template literals with gql and graphql tags
const query = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const mutation = graphql\`mutation CreatePost($input:PostInput!){createPost(input:$input){id title}}\`;

--------------------

--- FILE -----------
html.js
--- BEFORE ---------
// Tagged template literals with html tag
const template = html\`<div class="container"><h1>Hello</h1><p>World</p></div>\`;

const component = html\`<button type="button" onclick="handleClick()">Click</button>\`;

--- AFTER ----------
// Tagged template literals with html tag
const template = html\`<div class="container"><h1>Hello</h1><p>World</p></div>\`;

const component = html\`<button type="button" onclick="handleClick()">Click</button>\`;

--------------------

--- FILE -----------
markdown.js
--- BEFORE ---------
// Tagged template literals with md and markdown tags
const documentation = md\`#Heading
This is **bold**.
-Item 1
-Item 2\`;

const readme = markdown\`##Installation
\\\`\\\`\\\`bash
npm install package
\\\`\\\`\\\`\`;

--- AFTER ----------
// Tagged template literals with md and markdown tags
const documentation = md\`#Heading
This is **bold**.
-Item 1
-Item 2\`;

const readme = markdown\`##Installation
\\\`\\\`\\\`bash
npm install package
\\\`\\\`\\\`\`;

--------------------"
`;
